# kuluu-ffxi

./: .gitignore  .gitmodules  AGENTS.md  Cargo.toml  Cargo.toml.bak  LEGAL.md  README.md  rust-toolchain.toml
ffxi-actor/: Cargo.toml
ffxi-actor/src/: actor_state.rs  animation.rs  lib.rs  skeleton_instance.rs
ffxi-audio/: Cargo.toml  build.rs
ffxi-audio/examples/: dump_wav.rs
ffxi-audio/src/: adpcm.rs  header.rs  lib.rs  music_catalog.rs  path.rs  pcm.rs  stream.rs
ffxi-audio/tests/: round_trip.rs
ffxi-cli/: .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  Cargo.toml  OPERATING.md
ffxi-cli/ffxi-client/: Cargo.toml
ffxi-cli/ffxi-client/src/: agent_io.rs  chrome.rs  goal_store.rs  lib.rs  lobby_client.rs  main.rs  map_client.rs  reactor.rs  relay.rs  scene.rs  session.rs  state.rs  supervisor.rs  tui.rs  wire_translate.rs
ffxi-cli/ffxi-client/tests/: action_dispatch.rs  agent_session.rs  disconnect_recovery.rs  play_lifecycle.rs  zone_change.rs
ffxi-cli/ffxi-harness/: plugin.yaml
ffxi-cli/ffxi-harness/commands/: status.md
ffxi-cli/ffxi-harness/instructions/: playbook.md
ffxi-cli/ffxi-mcp/src/: main.rs
ffxi-cli/ffxi-nav/src/: grid.rs  lib.rs  zone_names.rs
ffxi-cli/ffxi-proto/: Cargo.toml  build.rs
ffxi-cli/ffxi-proto/src/: decode.rs  lib.rs  map.rs
ffxi-cli/ffxi-viewer-core/: Cargo.toml
ffxi-cli/ffxi-viewer-core/src/: camera.rs  components.rs  input_mode.rs  lib.rs  nameplate.rs  scene.rs  snapshot.rs
ffxi-cli/ffxi-viewer-wasm/: Cargo.toml
ffxi-cli/ffxi-viewer-wire/src/: lib.rs
ffxi-cli/playbooks/: farming.md  healer.md
ffxi-client/: Cargo.toml
ffxi-client/assets/maps/: README.md
ffxi-client/src/: agent_codec.rs  agent_io.rs  agent_socket.rs  auth_binary.rs  auth_client.rs  chrome.rs  config_dir.rs  debug_control.rs  delivery_box.rs  event_dialog.rs  fishing.rs  goal_store.rs  graphics_store.rs  keybinds_store.rs  launcher.rs  launcher_store.rs  lib.rs  lobby_client.rs  local_menu.rs  main.rs  map_client.rs  marker_store.rs  net_health.rs  reactor.rs  relay.rs  scene.rs  secret_store.rs  session.rs  state.rs  supervisor.rs  tls.rs  wire_translate.rs
ffxi-client/src/view3d/: aggro.rs  bridge.rs  camera.rs  floor.rs  input.rs  scene.rs
ffxi-client/src/view_native/: bridge.rs  camera_collision.rs  collision_bvh.rs  debug_heights.rs  exit_watchdog.rs  gamepad_input.rs  input.rs  key_items.rs  launcher_backdrop.rs  mod.rs  nameplate_occlude.rs  (+7 more)
ffxi-client/tests/: action_dispatch.rs  agent_session.rs  delivery_box_live.rs  disconnect_recovery.rs  play_lifecycle.rs  zone_change.rs
ffxi-client/wix/: main.wxs
ffxi-dat/: Cargo.toml  build.rs
ffxi-dat/examples/: dat-action-schedule.rs  dat-chunk-dump.rs  dat-chunk-kinds.rs  dat-chunks.rs  dat-cloud-probe.rs  dat-cross-resolve-check.rs  dat-decode-all.rs  dat-find-tba.rs  dat-global-mmb-scan.rs  dat-img-probe.rs  dat-list-kinds.rs  dat-mmb-aabb.rs  dat-mmb-dup-names.rs  dat-mmb-index.rs  dat-mmb-oor-survey.rs  dat-mmb-probe.rs  dat-mmb-rawname.rs  dat-mmb-strip-survey.rs  dat-mmb-stripdump.rs  dat-mmb-survey.rs  dat-mmb-tag-survey.rs  dat-mmb-unplaced-survey.rs  dat-mmb-variant-match.rs  dat-mmb-walk.rs  dat-mo2-probe.rs  dat-mzb-header-dump.rs  dat-mzb-maplist.rs  dat-mzb-placement-match.rs  dat-mzb-placements.rs  dat-mzb-probe.rs  dat-npc-name.rs  dat-placement-format-survey.rs  dat-placement-fulldump.rs  dat-print-root.rs  dat-resolve.rs  dat-scan-pointlights.rs  dat-scan-sounds.rs  dat-sk2-decode.rs  dat-sk2-enumerate.rs  dat-sk2-survey.rs  (+10 more)
ffxi-dat/src/: action.rs  anim.rs  archive.rs  bone.rs  chunk.rs  cib.rs  d3m.rs  datid.rs  dmsg.rs  event_dat.rs  event_locate.rs  ftable.rs  generator.rs  install_detect.rs  item_dat.rs  kind.rs  lib.rs  main_dll.rs  map_image.rs  mmb.rs  mzb.rs  npc_names.rs  particle_gen.rs  resource_dir.rs  scheduler.rs  sep.rs  skel.rs  skel_anim.rs  skel_mesh.rs  spell_info.rs  sprite_sheet.rs  texture.rs  ui_element.rs  vos2.rs  vtable.rs  weather.rs  zone_dat.rs  zone_interaction.rs
ffxi-dat/tests/: item_dat_block.rs
ffxi-event/: Cargo.toml
ffxi-event/src/: lib.rs  opcode_meta.rs  runner.rs  vm.rs
ffxi-mcp/: Cargo.toml
ffxi-mcp/src/: attach.rs  main.rs
ffxi-nav/: Cargo.toml  build.rs
ffxi-nav-recast/: Cargo.toml
ffxi-nav-recast/src/: fetch.rs  lib.rs
ffxi-nav-recast/tests/: fetch_live.rs
ffxi-nav/docs/: detour_format.md
ffxi-nav/src/: grid.rs  lib.rs  zone_names.rs  zonelines.rs
ffxi-proto/: Cargo.toml  build.rs
ffxi-proto/data/: autotranslate.tsv
ffxi-proto/src/: ability_names.rs  action_anim.rs  autotranslate.rs  blowfish.rs  cast_time.rs  checksum.rs  decode.rs  emote_names.rs  equip_info.rs  framing.rs  item_flags.rs  item_names.rs  item_usable.rs  job_names.rs  key_item_names.rs  lib.rs  login.rs  magic.rs  map.rs  md5.rs  msg_action_modifier.rs  msg_area.rs  msg_basic.rs  msg_channel.rs  msg_system.rs  packet_names.rs  recast.rs  skill_names.rs  spell_names.rs  status_effects.rs  status_names.rs  valid_target.rs  vana_time.rs  zlib.rs
ffxi-viewer-core/: Cargo.toml
ffxi-viewer-core/examples/: actor-render-headless.rs  actor-scan.rs  actor-view.rs  mmb-view.rs  mzb-render-headless.rs  zone-render-headless.rs  zz-anim-cov.rs  zz-cascade-panic-repro.rs  zz-diag-elem.rs  zz-emote-probe.rs  zz-head-axis.rs
ffxi-viewer-core/src/: atmosphere.rs  audio.rs  camera.rs  combat_stance.rs  components.rs  cursor.rs  dat_d3m.rs  dat_mmb.rs  dat_mzb.rs  dat_vos2.rs  debug_chat.rs  ffxi_actor_render.rs  ffxi_zone_material.rs  graphics_settings.rs  hud_hide.rs  input_method.rs  input_mode.rs  lens_flare.rs  lens_flare.wgsl  lib.rs  lock_on.rs  look_resolver.rs  moon.wgsl  moon_material.rs  mouse.rs  nameplate.rs  nameplate_billboard.rs  particle_sim.rs  perf_probe.rs  picking.rs  scene.rs  scheduler_runtime.rs  skeleton_instance.rs  skinned_ffxi.wgsl  skinned_ffxi_material.rs  skinned_ffxi_prepass.wgsl  sky_realism.rs  skybox.rs  skybox.wgsl  snapshot.rs  (+19 more)
ffxi-viewer-core/tests/: mh_collision_grounding.rs
ffxi-viewer-wasm/: Cargo.toml  index.html
ffxi-viewer-wasm/src/: lib.rs  source.rs
xtask/: Cargo.toml
xtask/src/: main.rs
(+215 files in other folders)
