[workspace]
resolver = "2"
members = ["ffxi-proto", "ffxi-client", "ffxi-mcp", "ffxi-nav", "ffxi-nav-recast", "ffxi-viewer-wire", "ffxi-viewer-core", "ffxi-viewer-wasm", "ffxi-dat", "ffxi-actor", "ffxi-audio", "ffxi-event", "xtask"]
# `xtask` is project automation run on demand via `cargo xtask` — exclude it
# from the default set so plain `cargo build`/`test` don't compile it.
default-members = ["ffxi-proto", "ffxi-client", "ffxi-mcp", "ffxi-nav", "ffxi-nav-recast", "ffxi-viewer-wire", "ffxi-viewer-core", "ffxi-viewer-wasm", "ffxi-dat", "ffxi-actor", "ffxi-audio", "ffxi-event"]

# Vendored fork of recastnavigation-rs 0.1.0 with a one-line `#include
# <cstddef>` in Deterministic.h. Without it, `cargo test` fails with
# "unknown type name 'size_t'" because cxx-bridge-generated TUs don't
# transitively include stdlib. See vendor/recastnavigation-rs/recastnavigation/
# Deterministic/Include/Deterministic.h for the patch comment.
[patch.crates-io]
recastnavigation-rs = { path = "vendor/recastnavigation-rs" }
# Bevy 0.19 ports not yet published on crates.io — pinned to the head of each
# upstream migration PR. Drop when releases land (tracked in kuluu-u11r).
# bevy_water: Neopallium/bevy_water#45; bevy_framepace: aevyrie/bevy_framepace#78.
bevy_water = { git = "https://github.com/gameartel/bevy_water", rev = "0da726338576cca487e1642d2403442573e2c276" }
bevy_framepace = { git = "https://github.com/noprobelm/bevy_framepace", rev = "a9b8eb256dd3bbe746fda06fad77790bb3143ba7" }
# Vendored copy of bevy_pbr 0.19.0 with one addition: a RenderDiagnosticsPlugin
# pass_span around each shadow render pass (src/render/light.rs, grep "KULUU
# PATCH"). Upstream records GPU timing for the main 3D passes but not shadow
# passes, so shadow cost is invisible in the perf HUD without this. Drop when
# upstream adds a shadow pass span (candidate for an upstream PR).
bevy_pbr = { path = "vendor/bevy_pbr" }
# Vendored copy of bevy_light 0.19.0 with one fix: check_dir_light_mesh_visibility
# panics with index-out-of-bounds when a directional light's cascade count grows
# at runtime (graphics-menu ShadowCascadeCount / preset change) because stale
# thread-local queues from a smaller-cascade par_iter are indexed unguarded
# (src/lib.rs, grep "KULUU PATCH"). Unfixed on bevy main as of 2026-07 —
# candidate for an upstream PR; drop when upstream lands the guard.
# Tracked in kuluu-y3o0.
bevy_light = { path = "vendor/bevy_light" }

# Bevy's recommended dev profile: build our own crates at opt-level=1
# (still fast to compile, still debuggable) but compile every dependency
# at opt-level=3. Without this, `cargo run` of the native-window client
# spends seconds in unoptimized wgpu/naga/bevy_render startup before the
# window appears. One-time first-build cost is ~30-60s; incremental
# rebuilds of workspace crates are unaffected.
#
# Build-speed tuning (requires the nightly toolchain pinned in
# rust-toolchain.toml and `[unstable] codegen-backend = true` in
# .cargo/config.toml):
#   * codegen-backend = "cranelift" for *our* crates — Cranelift's debug
#     codegen is much faster than LLVM, which is the bulk of the wait when
#     rebuilding a Bevy-dependent workspace crate like ffxi-viewer-core.
#   * deps keep the LLVM backend at opt-level=3, so their runtime perf is
#     unchanged (Cranelift does not optimize like LLVM).
#   * debug = "line-tables-only" keeps file:line in panics/backtraces but
#     drops variable-level debuginfo, cutting codegen + final link time on
#     the large client binary. Use debug = true if you need lldb stepping.
# Cranelift is dev-only; release/wasm builds are untouched (LLVM).
# opt-level = 2 (not 1): the viewer-core hot paths — per-vertex overbright
# scanning, cloud/zone mesh building, texture decode — run in *our* crates,
# so opt-level=1 left them slow enough to stutter zone-loads in dev (release
# is unaffected). opt-level=2 with Cranelift recovers most of that runtime
# speed for a modest codegen-time hit; drop back to 1 if rebuilds feel slow.
[profile.dev]
opt-level = 2
debug = "line-tables-only"
codegen-backend = "cranelift"

[profile.dev.package."*"]
opt-level = 3
codegen-backend = "llvm"

[workspace.package]
version = "0.2.0"
edition = "2021"
license = "GPL-3.0-or-later"
repository = "https://github.com/jondwillis/kuluu-ffxi"
homepage = "https://github.com/jondwillis/kuluu-ffxi"
authors = ["The Kuluu contributors"]
description = "A faithful open-source FINAL FANTASY XI client in Rust + Bevy."

[workspace.dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
md-5 = "0.10"
rustls = { version = "0.23", default-features = false, features = ["std", "ring"] }
rustls-pki-types = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.11"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["ring"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# 3D viewer engine, used by the native windowed client. No longer
# constrained by `bevy_ratatui_camera`'s feature requirements (the TUI
# subcommand was removed); future work can now trim Bevy default
# features per `[features]` of the native-window build.
bevy = { version = "0.19", features = ["debug"] }

# MCP server SDK for the ffxi-mcp crate (Stage 4).
rmcp = { version = "2.2", features = ["server", "macros", "schemars", "transport-io"] }
schemars = "1"

# Test fixtures: direct MariaDB access so each integration test can stamp
# out an isolated account+char and clean up after itself.
mysql_async = { version = "0.37", default-features = false, features = ["minimal-rust"] }

# ---------------------------------------------------------------------------
# Release packaging via dist (cargo-dist). dist OWNS the generated
# .github/workflows/release.yml once `dist generate` runs; until the throwaway
# `v0.0.0-disttest` dry-run validates the pipeline, the hand-rolled release.yml
# still ships and this config is inert. Config lives here (not a separate
# dist-workspace.toml) so the auto-release version-bump tooling keeps reading a
# single file. Only ffxi-client ships — every other bin crate sets
# `[package.metadata.dist] dist = false`.
[workspace.metadata.dist]
cargo-dist-version = "0.32.0"
ci = ["github"]
# Bare archives + the installers Windows/Unix users expect. Homebrew is
# deferred until a tap repo + HOMEBREW_TAP_TOKEN exist.
installers = ["shell", "powershell", "msi"]
targets = [
    "x86_64-unknown-linux-gnu",
    "aarch64-apple-darwin",
    "x86_64-pc-windows-msvc",
]
# Mirror the hand-rolled legs' `cargo build -p ffxi-client --features native-window`.
features = ["native-window"]
default-features = true
# A YAML array of steps injected before `dist build`. The path is resolved
# relative to .github/workflows/, so `../` keeps the fragment OUT of that dir —
# GitHub Actions runs every *.yml under .github/workflows/ as a workflow, and a
# bare step-array isn't a valid one (it fails the run at parse time). Carries the
# per-OS env + submodule-init the hand-rolled release.yml did inline — REQUIRED,
# or build.rs panics with no vendor/server.
github-build-setup = "../build-setup.yml"
# dist cannot build the trunk/wasm bundle; this custom job produces it and dist
# attaches the zip to the same GitHub Release.
global-artifacts-jobs = ["./release-wasm"]
# PRs only run `dist plan` (no full build) — ci.yml already gates fmt/clippy/test.
pr-run-mode = "plan"

# dist builds under its own profile; inherit release (LLVM — Cranelift is
# dev-only) and add thin LTO, matching what `dist init` would generate.
[profile.dist]
inherits = "release"
lto = "thin"
