[package]
name = "ffxi-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "MCP server bridging the FFXI ffxi-client to LLM harnesses (Claude Code, OpenCode, pi.dev)."

[[bin]]
name = "ffxi-mcp"
path = "src/main.rs"

[dependencies]
ffxi-client = { path = "../ffxi-client" }

anyhow.workspace = true
rmcp.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
