[package]
name = "ffxi-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "MCP server bridging the FFXI ffxi-client to LLM harnesses (Claude Code, OpenCode, pi.dev)."

[[bin]]
name = "ffxi-mcp"
path = "src/main.rs"

[dependencies]
# `relay` enables the WebSocket viewer relay so an LLM-driven session can
# be observed in the browser viewer (`ffxi-viewer-wasm`) while the agent
# is operating. Opt-in at runtime via the `FFXI_RELAY_LISTEN` env var.
ffxi-client = { path = "../ffxi-client", features = ["relay"] }

anyhow.workspace = true
rmcp.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
