[package]
name = "ffxi-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "MCP server bridging the FFXI ffxi-client to LLM harnesses (Claude Code, OpenCode, pi.dev)."
# The MCP server is the canonical entry — `cargo run -p ffxi-mcp` and
# the `.mcp.json` invocations both rely on this. The companion
# `ffxi-mcp-repl` binary needs an explicit `--bin` flag.
default-run = "ffxi-mcp"

[[bin]]
name = "ffxi-mcp"
path = "src/main.rs"

# Headless REPL: spawns `ffxi-mcp` as a subprocess and exposes a
# line-oriented terminal driver for tool calls. Useful for scripted
# regression sequences and for poking the MCP layer without an LLM
# in the loop. See `src/bin/ffxi-mcp-repl.rs`.
[[bin]]
name = "ffxi-mcp-repl"
path = "src/bin/ffxi-mcp-repl.rs"

[dependencies]
# `relay` enables the WebSocket viewer relay so an LLM-driven session can
# be observed in the browser viewer (`ffxi-viewer-wasm`) while the agent
# is operating. Opt-in at runtime via the `FFXI_RELAY_LISTEN` env var.
ffxi-client = { path = "../ffxi-client", features = ["relay"] }
# Direct dep so headless MCP can attempt a DAT-install load for the
# Config's `dat_root` field. AGPL note: ffxi-dat is built against
# POLUtils (Apache-2.0), not xi-tinkerer, so linking from the
# network-facing MCP crate is allowed — see
# `~/.claude/projects/.../memory/ffxi_agpl_containment.md`.
ffxi-dat = { path = "../ffxi-dat" }

anyhow.workspace = true
rmcp.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
