[package]
name = "ffxi-viewer-core"
version.workspace = true
edition.workspace = true
license.workspace = true

# Bevy ECS plugins, world model, camera, and HUD shared by both the native
# windowed viewer (ffxi-client/src/view_native/) and the browser viewer
# (ffxi-viewer-wasm/). No tokio, no I/O — state arrives through the
# `SceneSource` trait, implemented separately by each front-end.
#
# Stage-3 wasm build will need to override `bevy` to use webgl2 features
# and drop platform backends that are linux-only — this Cargo.toml uses
# the workspace bevy (full default features) for the native build.

[dependencies]
# `serialize` enables serde derives on `KeyCode`, `Modifiers` modifiers, and
# the rest of `bevy_input` — needed by `keybinds::KeyBind` so the on-disk
# `keybinds.json` can name keys (`"KeyW"`, `"Numpad8"`, etc.) without a
# hand-rolled match table covering every variant.
bevy = { workspace = true, features = ["serialize"] }
ffxi-viewer-wire = { path = "../ffxi-viewer-wire" }
ffxi-dat = { path = "../ffxi-dat" }
serde = { workspace = true }

# wasm32 has no syscall for wall-clock time; std::time::SystemTime::now()
# panics there. The HUD's reconnect-age line needs millis-since-epoch, so
# we delegate to JS's `Date.now()` on wasm targets only.
[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "0.3"

[dev-dependencies]
